.gitignore for lesson3

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ lesson_2/_cities.sql
 lesson_2/_regions.sql  
 lesson_2/tables.sql
 lesson_1/lesson_1.zip
+lesson_3/*
+!lesson_3/dml_statements.sql
 
